# carnd-term2-notes

./: .gitignore  11_Laser_Measurements_Part_3  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  term2_notes.cbp
L3_Kalman_Filters/: 19_Quiz_Kalman_Filter_Code.py  26_Multi_Dimensional_Kalman_Filter_Impl.py
L5_Lidar_and_Radar_with_Kalman_Filters/11_Laser_Measurements_Part_3/: ground_truth_package.h  kalman_filter.cpp  kalman_filter.h  main.cpp  main.h  measurement_package.h  tracking.cpp  tracking.h
L5_Lidar_and_Radar_with_Kalman_Filters/16_Jacobian_Matrix_Part_1/: main.cpp  main.h
L5_Lidar_and_Radar_with_Kalman_Filters/20_Evalating_KF_Performance_Part_1/: main.cpp  main.h
L5_Lidar_and_Radar_with_Kalman_Filters/5_Kalman_Filter_Equations_in_C++_Part1/: KalmanFilter.cpp  KalmanFilter.h
L5_Lidar_and_Radar_with_Kalman_Filters/5_Kalman_Filter_Equations_in_C++_Part1/Eigen/: CMakeCache.txt
L7_Unscented_Kalman_Filters/14_Generating_Sigma_Points_Assignment_1/: ukf.cpp
L7_Unscented_Kalman_Filters/17_Augmentation_Assignment_1/: ukf.cpp
L7_Unscented_Kalman_Filters/20_Sigma_Point_Prediction_Assignment_1/: ukf.cpp
L7_Unscented_Kalman_Filters/23_Predicted_Mean_and_Covariance_Assignment_1/: main.cpp  ukf.cpp
L7_Unscented_Kalman_Filters/29_UKF_Update_Assignment_1/: ukf.cpp
lib/Eigen/src/: CMakeCache.txt
scratchpad/: Car.cpp  Car.h  hello_world.cpp  hello_world.h
